--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video-MME: Welcome</title>
+  <title>MME-HD: Welcome</title>
   <link rel="icon" href="./static/images/video-mme.png">
   <!-- External Libraries and Stylesheets -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.13.1/css/OverlayScrollbars.min.css" rel="stylesheet">
@@ -38,8 +38,8 @@
       <div class="header-top" style="top: 30%;">
         <div class="logo" style="font-family: 'CustomFont', sans-serif; font-size: 300px;">Video-MME</div>
         <div class="please-scroll-2" style="top: 130%;">
-          <span id="reminder" style="font-size: 40px;">The First-Ever Comprehensive Evaluation Benchmark of </span>
-          <span id="reminder" style="font-size: 40px;">Multi-modal LLMs in Video Analysis </span>
+          <span id="reminder" style="font-size: 40px;">Fully Human-Annotated Benchmark </span>
+          <span id="reminder" style="font-size: 40px;">for Multi-Modal LLMs in Real-World Image Perception and Understanding </span>
         </div>
       </div>
       <div class="please-scroll">
